--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,8 +2,7 @@
     "languageserver" : {
     },
     "coc.preferences.formatOnSaveFiletypes": [
-    "cpp",
-    "c"
+    "cpp"
   ],
   "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/14.0.3/clangd_14.0.3/bin/clangd",
 }
